# 6502

./: .gitignore  CMakeLists.txt
src/: h6502.h  macros.h  main.c  main_6502.c
tests/: AND_EOR_ORA_tests.c  Add_With_Carry_tests.c  Branch_tests.c  Compare_Register_tests.c  Increment_Decrement_tests.c  Jumps_and_Calls_tests.c  LDA_tests.c  LDX_tests.c  Load_Operation_tests.c  Load_Program_tests.c  Shift_tests.c  Stack_Operation_tests.c  Status_Flag_Change_tests.c  Store_Operation_tests.c  System_Function_tests.c  Transfer_Register_tests.c  tests.c
tests/Unity/: unity.c  unity.h
